fixed overflow for chrome

--- a/css/copybutton.css
+++ b/css/copybutton.css
@@ -17,6 +17,7 @@
   z-index: 1;
   border-radius: 4px;
   padding: 10px;
+  overflow: hidden;
 }
 
 .chroma .lntd:first-child {
